<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@drawable/fondo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cl.inacap.tarea.u1.mantenedorcliente.Cliente2Activity" >

 

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cliente_rut" />

                <EditText
                    android:id="@+id/txt_id2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/login_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cliente_nombre" />

                <EditText
                    android:id="@+id/txt_nombre2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/contrasena_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cliente_direccion" />

                <EditText
                    android:id="@+id/txt_direccion2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cliente_telefono" />

                <EditText
                    android:id="@+id/txt_telefono2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                 <TextView
                     android:id="@+id/cliente_longitudwww"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/cliente_longitud" />

                <EditText
                    android:id="@+id/longitud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/cliente_latitudwewe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cliente_latitud" />

                <EditText
                    android:id="@+id/latitud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_ingresar2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="42dp"
                    android:layout_weight="0.54"
                    android:background="@drawable/buttonshape"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/cliente_boton"
                    android:textColor="#DBDBDB"
                    android:textSize="30sp" />
            </LinearLayout>

        </ScrollView>

</RelativeLayout>
